--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
 	<link rel="manifest" href="/images/manifest.json">
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">F
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 	<script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/skel.min.js"></script>
